Properly render font-awesome.min.css for asset pipeline

--- a/app/assets/stylesheets/nightlight/font-awesome.min.css.erb
+++ b/app/assets/stylesheets/nightlight/font-awesome.min.css.erb
@@ -1,4 +1,8 @@
-@font-face{font-family:'FontAwesome';src:url('../nightlight/fontawesome-webfont.eot?v=3.2.1');src:url('../nightlight/fontawesome-webfont.eot?#iefix&v=3.2.1') format('embedded-opentype'),url('../nightlight/fontawesome-webfont.woff?v=3.2.1') format('woff'),url('../nightlight/fontawesome-webfont.ttf?v=3.2.1') format('truetype'),url('../nightlight/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') format('svg');font-weight:normal;font-style:normal;}[class^="icon-"],[class*=" icon-"]{font-family:FontAwesome;font-weight:normal;font-style:normal;text-decoration:inherit;-webkit-font-smoothing:antialiased;*margin-right:.3em;}
+//= depend_on_asset "nightlight/fontawesome-webfont.eot"
+//= depend_on_asset "nightlight/fontawesome-webfont.woff"
+//= depend_on_asset "nightlight/fontawesome-webfont.ttf"
+//= depend_on_asset "nightlight/fontawesome-webfont.svg"
+@font-face{font-family:'FontAwesome';src:url('<%= font_path('nightlight/fontawesome-webfont.eot') %>?v=3.2.1');src:url('<%= font_path('nightlight/fontawesome-webfont.eot') %>?#iefix&v=3.2.1') format('embedded-opentype'),url('<%= font_path('nightlight/fontawesome-webfont.woff') %>?v=3.2.1') format('woff'),url('<%= font_path('nightlight/fontawesome-webfont.ttf') %>?v=3.2.1') format('truetype'),url('<%= font_path('nightlight/fontawesome-webfont.svg') %>#fontawesomeregular?v=3.2.1') format('svg');font-weight:normal;font-style:normal;}[class^="icon-"],[class*=" icon-"]{font-family:FontAwesome;font-weight:normal;font-style:normal;text-decoration:inherit;-webkit-font-smoothing:antialiased;*margin-right:.3em;}
 [class^="icon-"]:before,[class*=" icon-"]:before{text-decoration:inherit;display:inline-block;speak:none;}
 .icon-large:before{vertical-align:-10%;font-size:1.3333333333333333em;}
 a [class^="icon-"],a [class*=" icon-"]{display:inline;}
