--- a/app/views/nightlight/pages/show.html.erb
+++ b/app/views/nightlight/pages/show.html.erb
@@ -38,7 +38,7 @@
   <h3 style="margin-top:0">Nobody is checking this</h3>
   <%= link_to "I'll check it", assign_page_path(@page), class: 'btn btn-default btn-lg', data: {method: :post} %>
   <br/>
-  <%= link_to "Already checked it?", '#' %>
+  <%= link_to "Already checked it?", checked_page_path(@page), data: {method: :post} %>
 <% end %>
 </div>
 
